--- a/app/templates/tags/create.html
+++ b/app/templates/tags/create.html
@@ -40,6 +40,9 @@
                                     <option value="environment">环境标签</option>
                                     <option value="department">部门标签</option>
                                     <option value="project">项目标签</option>
+                                    <option value="virtualization">虚拟化类型</option>
+                                    <option value="deployment">部署方式</option>
+                                    <option value="architecture">架构类型</option>
                                     <option value="other">其他标签</option>
                                 </select>
                                 <div class="form-text">选择标签所属分类</div>
