--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -247,7 +247,7 @@
                         </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/unified-logs/">
+                        <a class="nav-link" href="/logs/">
                             <i class="fas fa-chart-line me-1"></i>日志中心
                         </a>
                     </li>
